# HP-Softpaq-Orchestrator

./: LICENSE.txt  README.md  pyproject.toml  requirements_dev.txt  tox.ini
.github/workflows/: HPSO.yml  tox.yml
database/: create_db.sql
src/SoftPaqOrchestrator/: database.py  logger.py
src/SoftpaqOrchestrator/: database.py  logger.py
tests/: create_db_WITH_ERRORS.sql  test_database.py  test_logger.py
