[build-system]
requires = ['setuptools>=64.0.0', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name = 'SoftPaqOrchestrator'
version = '0.1.0a'
requires-python = '>=3.10'
dependencies = ['fastapi[all]']

readme = 'README.md'
license.file = 'LICENSE.txt'
authors = [
    {name = 'Rodrigo Luzuriaga', email = 'rodrigoluzuriaga@icloud.com'},
    {name = 'Alex George', email = 'xzeroknightx@gmail.com'},
]

[project.optional-dependencies]
dev = ['black>=22.1.0', 'flake8', 'isort>=5.0.0', 'mypy', 'pytest>=6.0']

[project.urls]
homepage = 'https://github.com/mtsac-tech-health/HP-Softpaq-Orchestrator'

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
line_length = 120
atomic = true

[tool.pytest.ini_options]
addopts = ['--import-mode=importlib']
